Issue 1745: Spacing after submit on webform

--- a/themes/ddbasic/sass/module/_webforms.scss
+++ b/themes/ddbasic/sass/module/_webforms.scss
@@ -17,3 +17,7 @@
 .webform-confirmation + .links {
   margin-bottom: 20px;
 }
+
+.webform-client-form input[type="submit"] {
+  margin-bottom: 1em;
+}
